--- a/ptype.html
+++ b/ptype.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legendary Motorsports</title>
+    <title>Game</title>
 
     <!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
@@ -18,9 +18,15 @@
 }
 
 .card {
-    border-color: #C0C0C0;
     background-color: #000000;
-    color: azure;
+    border-color: white;
+    color:white
+}
+.card:hover {
+  border-width: 2px;
+}
+.card:active {
+  border-style:hidden;
 }
 .row {
     padding: 5px;
@@ -28,6 +34,7 @@
 .card-img-top {
   height: 150px;
 }
+
         </style>
 
 </head>
@@ -35,7 +42,7 @@
     <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="top-img" alt="40">
     <div class="big-cont">
     <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/ptype.html">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#about">About</a></li>
@@ -45,12 +52,14 @@
     <div class="container my-4">
       <div class="row">
         <div class="col-md-4">
+          <a style="text-decoration: none;" href="file:///C:/Users/surya/Downloads/f40.html">
           <div class="card">
             <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="card-img-top" alt="f40">
             <div class="card-body">
             <h5>FERRARI F40 <p style="background-color: red;float: right; font-size: small;">$100,000,000</p></h5>
           </div>
         </div>
+      </a>
       </div>
       <div class="col-md-4">
         <div class="card">
