--- a/2-Door.html
+++ b/2-Door.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <title>2-Door</title>
 
     <!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
@@ -41,9 +41,9 @@
     <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="top-img" alt="40">
     <div class="big-cont">
     <ul>
-        <li><a href="file:///C:/Users/surya/Downloads/ptype.html">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/ptype.html">2-Door</a></li>
+        <li><a href="#news">4-Door</a></li>
+        <li><a href="#contact">2-Wheeler</a></li>
         <li><a href="#about">About</a></li>
       </ul>
 
