--- a/f40.html
+++ b/f40.html
@@ -38,9 +38,9 @@
 <body>
     <div class="big-cont">
     <ul>
-        <li><a href="file:///C:/Users/surya/Downloads/ptype.html">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/ptype.html">2-Door</a></li>
+        <li><a href="#news">4-Door</a></li>
+        <li><a href="#contact">2-Wheeler</a></li>
         <li><a href="#about">About</a></li>
       </ul>
 
