--- a/2-Door.html
+++ b/2-Door.html
@@ -40,6 +40,8 @@
 <body>
     <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="top-img" alt="40">
     <div class="big-cont">
+        
+        <!--main page links-->
     <ul>
         <li><a href="file:///C:/Users/surya/Downloads/ptype.html">2-Door</a></li>
         <li><a href="#news">4-Door</a></li>
@@ -169,7 +171,8 @@
       </div>
       </div>
     </div>
-    
+
+    <!--footer section-->
       <footer class="bg-dark text-white text-center p-3">
       <div class="container my-4">
         <div class="row">
