--- a/f40.html
+++ b/f40.html
@@ -38,6 +38,7 @@
 <body>
     <div class="big-cont">
     <ul>
+        <!--Main Links-->
         <li><a href="file:///C:/Users/surya/Downloads/ptype.html">2-Door</a></li>
         <li><a href="#news">4-Door</a></li>
         <li><a href="#contact">2-Wheeler</a></li>
@@ -56,10 +57,12 @@
           </div>
         </div>
         <div class="col-md-8">
+            <!--Paragraph about particular car-->
             <p>Experience the thrill of owning a true icon of automotive history with the **Ferrari F40**—a masterpiece designed to ignite your passion for speed and luxury. As the last Ferrari personally approved by Enzo Ferrari himself, the F40 is more than just a car; it’s a legacy of performance, craftsmanship, and exclusivity. Beneath its striking, aerodynamic body lies a twin-turbocharged V8 engine that delivers an exhilarating 471 horsepower, launching you from 0 to 60 mph in just 3.8 seconds. With its lightweight design, raw power, and unmistakable presence, the F40 isn’t just a drive—it’s an experience that commands attention at every turn. This is your chance to own a timeless piece of Ferrari heritage, built for those who crave the ultimate driving adventure.</p>
         </div>
         </div>
         <div class="row">
+            <!--Specifications on particular car-->
             <h3>Specs</h3>
             <div class="col-md-4">
                 <p>Engine: 2.9L Twin-Turbocharged V8
