--- a/2-Door.html
+++ b/2-Door.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2-Door</title>
+    <title>Game</title>
 
     <!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
@@ -40,12 +40,10 @@
 <body>
     <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="top-img" alt="40">
     <div class="big-cont">
-        
-        <!--main page links-->
     <ul>
-        <li><a href="file:///C:/Users/surya/Downloads/ptype.html">2-Door</a></li>
-        <li><a href="#news">4-Door</a></li>
-        <li><a href="#contact">2-Wheeler</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/2-Door.html">2-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/4-Door.html">4-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/2-Wheeler.html">2-Wheeler</a></li>
         <li><a href="#about">About</a></li>
       </ul>
 
@@ -171,8 +169,7 @@
       </div>
       </div>
     </div>
-
-    <!--footer section-->
+    
       <footer class="bg-dark text-white text-center p-3">
       <div class="container my-4">
         <div class="row">
