--- a/f40.html
+++ b/f40.html
@@ -38,10 +38,10 @@
 <body>
     <div class="big-cont">
     <ul>
-      <li><a href="file:///C:/Users/surya/Downloads/2-Door.html">2-Door</a></li>
-      <li><a href="file:///C:/Users/surya/Downloads/4-Door.html">4-Door</a></li>
-      <li><a href="file:///C:/Users/surya/Downloads/2-Wheeler.html">2-Wheeler</a></li>
-      <li><a href="#about">About</a></li>
+        <li><a href="2-Door.html">2-Door</a></li>
+        <li><a href="4-Door.html">4-Door</a></li>
+        <li><a href="2-Wheeler.html">2-Wheeler</a></li>
+        <li><a href="#about">About</a></li>
       </ul>
 
     <!--ROW 1-->
