--- a/2-Wheeler.html
+++ b/2-Wheeler.html
@@ -111,26 +111,26 @@
     </div>
     
       <footer class="bg-dark text-white text-center p-3">
-      <div class="container my-4">
-        <div class="row">
-          <div class="col-md-2">
-              <img src="https://i.pinimg.com/736x/b1/fc/a2/b1fca29b382abdb7a3fa0eb69aec0a58.jpg" style="width:100px;" alt="f40">
+        <div class="container my-4">
+          <div class="row">
+            <div class="col-md-2">
+                <img src="ferrari_logo.png" style="width:100px;" alt="f40">
+            </div>
+            <div class="col-md-2">
+              <img src="lambo_logo.png" style="width:100px;" alt="f40">
           </div>
           <div class="col-md-2">
-            <img src="https://i.pinimg.com/736x/b1/fc/a2/b1fca29b382abdb7a3fa0eb69aec0a58.jpg" style="width:100px;" alt="f40">
+            <img src="mas_logo.png" style="width:100px;" alt="f40">
         </div>
         <div class="col-md-2">
-          <img src="https://i.pinimg.com/736x/b1/fc/a2/b1fca29b382abdb7a3fa0eb69aec0a58.jpg" style="width:100px;" alt="f40">
-      </div>
-      <div class="col-md-2">
-        <img src="https://i.pinimg.com/736x/b1/fc/a2/b1fca29b382abdb7a3fa0eb69aec0a58.jpg" style="width:100px;" alt="f40">
+          <img src="porsche_logo.png" style="width:100px;" alt="f40">
+      </div><div class="col-md-2">
+        <img src="bmw_logo.png" style="width:100px;" alt="f40">
     </div><div class="col-md-2">
-      <img src="https://i.pinimg.com/736x/b1/fc/a2/b1fca29b382abdb7a3fa0eb69aec0a58.jpg" style="width:100px;" alt="f40">
-  </div><div class="col-md-2">
-    <img src="https://i.pinimg.com/736x/b1/fc/a2/b1fca29b382abdb7a3fa0eb69aec0a58.jpg" style="width:100px;" alt="f40">
-</div>
+      <img src="benz_logo.png" style="width:100px;" alt="f40">
+  </div>
+          </div>
         </div>
-      </div>
       </div>
       </footer>
 
