--- a/2-Wheeler.html
+++ b/2-Wheeler.html
@@ -41,6 +41,7 @@
     <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="top-img" alt="40">
     <div class="big-cont">
     <ul>
+        <li><a href="Home.html">Home</a></li>
         <li><a href="2-Door.html">2-Door</a></li>
         <li><a href="4-Door.html">4-Door</a></li>
         <li><a href="2-Wheeler.html">2-Wheeler</a></li>
