--- a/lambo_murci.html
+++ b/lambo_murci.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>F40</title>
+    <title>Lamborghini Murcialago</title>
 
     <!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="card-img-top" alt="f40">
+            <img src="https://static.wikia.nocookie.net/topgear/images/0/03/2002_lamborghini_murcielago_2.jpg/revision/latest?cb=20111203192849" class="card-img-top" alt="f40">
             <div class="card-body">
             <h5>Lambo Murci <p style="background-color:red; float:right; font-size:small;">$100,000,000</p></h5>
           </div>
