--- a/2-Door.html
+++ b/2-Door.html
@@ -52,7 +52,7 @@
     <div class="container my-4">
       <div class="row">
         <div class="col-md-4">
-          <a style="text-decoration: none;" href="file:///C:/Users/surya/Downloads/f40.html">
+          <a style="text-decoration: none;" href="f40.html">
           <div class="card">
             <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="card-img-top" alt="f40">
             <div class="card-body">
