--- a/4-Door.html
+++ b/4-Door.html
@@ -97,9 +97,9 @@
     
         <div class="big-cont">
         <ul class="navbar">
-          <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">2-Door</a></li>
-          <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">4-Door</a></li>
-          <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">2-Wheeler</a></li>
+          <li><a href="2-Door.html">2-Door</a></li>
+          <li><a href="4-Door.html">4-Door</a></li>
+          <li><a href="2-Wheeler.html">2-Wheeler</a></li>
         </ul>
 
 
