--- a/f40.html
+++ b/f40.html
@@ -36,13 +36,13 @@
 
 </head>
 <body>
-    <div class="big-cont">
-    <ul>
-      <li><a href="file:///C:/Users/surya/Downloads/2-Door.html">2-Door</a></li>
-      <li><a href="file:///C:/Users/surya/Downloads/4-Door.html">4-Door</a></li>
-      <li><a href="file:///C:/Users/surya/Downloads/2-Wheeler.html">2-Wheeler</a></li>
-      <li><a href="#about">About</a></li>
-      </ul>
+  <div class="big-cont">
+    <ul class="navbar">
+      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">2-Door</a></li>
+      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">4-Door</a></li>
+      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">2-Wheeler</a></li>
+      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Parts.html">Auto Parts</a></li>
+    </ul>
 
     <!--ROW 1-->
     <div class="container my-4">
@@ -61,7 +61,7 @@
         </div>
         <div class="row">
             <h3>Specs</h3>
-            <div class="col-md-4">
+            <div class="col-md-4" style="border-left: 2px solid black; background-color: red;">
                 <p>Engine: 2.9L Twin-Turbocharged V8
                     <br>Horsepower: 471 hp @ 7,000 rpm
                     <br>Torque: 426 lb-ft @ 4,000 rpm</p>
