--- a/2-Door.html
+++ b/2-Door.html
@@ -56,6 +56,9 @@
   <!--Slideshow container-->
   <div class="slideshow-container">
     <div class="mySlides">
+
+    </div>
+    <div class="mySlides">
       <img class="mySlides-img" src="m3_slide.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
       <div class="text">BMW M3</div>
     </div>
@@ -84,10 +87,10 @@
 
     <div class="big-cont">
     <ul class="navbar">
-        <li><a href="2-Door.html">2-Door</a></li>
-        <li><a href="4-Door.html">4-Door</a></li>
-        <li><a href="2-Wheeler.html">2-Wheeler</a></li>
-        <li><a href="Parts.html">Auto Parts</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">2-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">4-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">2-Wheeler</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Parts.html">Auto Parts</a></li>
       </ul>
 
     <!--ROW 1-->
@@ -290,6 +293,8 @@ function showSlides(n) {
   /*-----------------------------------------------------*/
 
     </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
