--- a/2-Wheeler.html
+++ b/2-Wheeler.html
@@ -105,10 +105,10 @@ function showSlides(n) {
 
     <div class="big-cont">
     <ul class="navbar">
-        <li><a href="2-Door.html">2-Door</a></li>
-        <li><a href="4-Door.html">4-Door</a></li>
-        <li><a href="2-Wheeler.html">2-Wheeler</a></li>
-        <li><a href="Parts.html">Auto Parts</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">2-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">4-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">2-Wheeler</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Parts.html">Auto Parts</a></li>
       </ul>
 
     <!--ROW 1-->
