--- a/slr.html
+++ b/slr.html
@@ -49,17 +49,16 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img id="myImg" src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="card-img-top" alt="f40">
+            <img id="myImg" src="https://i.ytimg.com/vi/RW2w5BhM6NM/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBUqfWfzYl3kZiE7eWwSdnN9aoYKg" class="card-img-top" alt="f40">
             <div class="card-body">
-            <h5>FERRARI F40 <p id="display-word" style="float:right; font-size:small;">€1,500,000</p></h5>
+            <h5>Mercedes-Mclaren SLR <p id="display-word" style="float:right; font-size:small;">€700,000</p></h5>
           </div>
           </div>
 
           <div class="options">
             <button id="change-item">currency</button>
-            <button id="myButton3" style="background-color: #0066ff; margin-left: 120px;"></button>
-            <button id="myButton" style="background-color: #eeff00;"></button>
-            <button id="myButton2" style="background-color: #ff0000;"></button>
+            <button id="myButton3" style="background-color:bisque; margin-left: 150px;"></button>
+            <button id="myButton" style="background-color: silver;"></button>
             <a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">
             <button id="purchase">Purchase</button>
           </a>
@@ -144,7 +143,7 @@
         <script>
           let currentIndex = 0;
   
-          currency = 1500000
+          currency = 700000
 
           let euro = currency
           let pound = currency * 0.83
@@ -167,13 +166,10 @@
       const myButton3 = document.getElementById("myButton3");
 
       myButton.addEventListener("click", function() {
-        myImg.src = "f40-yellow.jpg";
-      });
-      myButton2.addEventListener("click", function() {
-        myImg.src = "https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080";
+        myImg.src = "https://i.ytimg.com/vi/RW2w5BhM6NM/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBUqfWfzYl3kZiE7eWwSdnN9aoYKg";
       });
       myButton3.addEventListener("click", function() {
-        myImg.src = "f40-blue.jpg";
+        myImg.src = "slr-gold.jpg";
       });
 
       
