--- a/2-Door.html
+++ b/2-Door.html
@@ -128,7 +128,7 @@
     <a class="next" onclick="plusSlides(1)">❯</a>
     
     
-    <div class="dot-set" style="text-align:center">
+    <div class="dot-set" style="text-align:center;">
       <span class="dot" onclick="currentSlide(1)"></span> 
       <span class="dot" onclick="currentSlide(2)"></span> 
       <span class="dot" onclick="currentSlide(3)"></span> 
