--- a/Login.html
+++ b/Login.html
@@ -47,7 +47,7 @@
       <div>
         <form class="modal-content">
           <div class="sign-container">
-            <h1>Sign Up</h1>
+            <h1>Log In</h1>
             <p>Please fill in this form to create an account.</p>
             <hr>
             <label for="email"><b>Email</b></label>
