--- a/Login.html
+++ b/Login.html
@@ -37,10 +37,10 @@
 
     <div class="big-cont">
     <ul class="navbar">
-        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Signup.html">Sign Up</a></li>
-        <li style="text-decoration:underline;"><a href="file:///C:/Users/surya/Downloads/Motorworks/Login.html">Log In</a></li>
-        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">Purchase</a></li>
-        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">EXIT</a></li>
+        <li><a href="2-Door.html">2-Door</a></li>
+        <li><a href="4-Door.html">4-Door</a></li>
+        <li><a href="2-Wheeler.html">2-Wheeler</a></li>
+        <li><a href="Parts.html">Auto Parts</a></li>
       </ul>
 
       <!--Login Form-->
@@ -79,6 +79,7 @@
       </div>
 
   
+<!--Footer-->
       <footer class="bg-dark text-white text-center p-3">
       <div class="container my-4">
         <div class="row">
@@ -108,21 +109,32 @@
           <div class="col-md-3">
             <h6 style="text-align: left;">Contact Us</h6>
             <ul class="footer-emails">
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Home.html">surya.sathyarajan2@mail.dcu.ie</a></li>
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">Fionn</a></li>
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">Iarla</a></li>
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">Karol</a></li>
+              <li><a href="">surya.sathyarajan2@mail.dcu.ie</a></li>
+              <li><a href="">Fionn</a></li>
+              <li><a href="">Iarla</a></li>
+              <li><a href="">Karol</a></li>
             </ul>
         </div>
         <div class="col-md-2">
           <h6 style="text-align: left;">General</h6>
+          <ul class="footer-emails">
+            <li><a href="Signup.html">Sign Up</a></li>
+            <li><a href="Login.html">Log In</a></li>
+            <li><a href="Purchase.html">Checkout</a></li>
+          </ul>
       </div>
       <div class="col-md-3">
         <h6 style="text-align: left;">Socials</h6>
+        <ul class="footer-emails">
+        <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Youtube</a></li>
+        </ul>
     </div>
         </div>
       </div>
       </footer>
+
 
 
           <!--Slideshow Javascript-->
