--- a/slr.html
+++ b/slr.html
@@ -36,13 +36,13 @@
 
 </head>
 <body>
-  <div class="big-cont">
+    <div class="big-cont">
     <ul class="navbar">
-      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">2-Door</a></li>
-      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">4-Door</a></li>
-      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">2-Wheeler</a></li>
-      <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Parts.html">Auto Parts</a></li>
-    </ul>
+        <li><a href="2-Door.html">2-Door</a></li>
+        <li><a href="4-Door.html">4-Door</a></li>
+        <li><a href="2-Wheeler.html">2-Wheeler</a></li>
+        <li><a href="Parts.html">Auto Parts</a></li>
+      </ul>
 
     <!--ROW 1-->
     <div class="container my-4">
@@ -94,50 +94,62 @@
       </div>
       </div>
     
+ <!--Footer-->
       <footer class="bg-dark text-white text-center p-3">
-        <div class="container my-4">
-          <div class="row">
-            <div class="col-md-2">
-                <img src="ferrari_logo.png" style="width:100px;" alt="f40">
-            </div>
-            <div class="col-md-2">
-              <img src="lambo_logo.png" style="width:100px;" alt="f40">
+      <div class="container my-4">
+        <div class="row">
+          <div class="col-md-2">
+              <img src="ferrari_logo.png" style="width:100px;" alt="f40">
           </div>
           <div class="col-md-2">
-            <img src="mas_logo.png" style="width:100px;" alt="f40">
+            <img src="lambo_logo.png" style="width:100px;" alt="f40">
         </div>
         <div class="col-md-2">
-          <img src="porsche_logo.png" style="width:100px;" alt="f40">
-      </div><div class="col-md-2">
-        <img src="bmw_logo.png" style="width:100px;" alt="f40">
-    </div><div class="col-md-2">
-      <img src="benz_logo.png" style="width:100px;" alt="f40">
-  </div>
-          </div>
-        </div>
-        <div class="container my-4">
-          <div class="row" style="margin-top: 50px;">
-            <div class="col-md-3">
-                <h5 style="float:left">SIFK Motorworks</h5>
-            </div>
-            <div class="col-md-3">
-              <h6 style="text-align: left;">Contact Us</h6>
-              <ul class="footer-emails">
-                <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Home.html">surya.sathyarajan2@mail.dcu.ie</a></li>
-                <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">Fionn</a></li>
-                <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">Iarla</a></li>
-                <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">Karol</a></li>
-              </ul>
-          </div>
-          <div class="col-md-2">
-            <h6 style="text-align: left;">General</h6>
-        </div>
-        <div class="col-md-3">
-          <h6 style="text-align: left;">Socials</h6>
+          <img src="mas_logo.png" style="width:100px;" alt="f40">
       </div>
-          </div>
+      <div class="col-md-2">
+        <img src="porsche_logo.png" style="width:100px;" alt="f40">
+    </div><div class="col-md-2">
+      <img src="bmw_logo.png" style="width:100px;" alt="f40">
+  </div><div class="col-md-2">
+    <img src="benz_logo.png" style="width:100px;" alt="f40">
+</div>
         </div>
-        </footer>
+      </div>
+      <div class="container my-4">
+        <div class="row" style="margin-top: 50px;">
+          <div class="col-md-3">
+              <h5 style="float:left">SIFK Motorworks</h5>
+          </div>
+          <div class="col-md-3">
+            <h6 style="text-align: left;">Contact Us</h6>
+            <ul class="footer-emails">
+              <li><a href="">surya.sathyarajan2@mail.dcu.ie</a></li>
+              <li><a href="">Fionn</a></li>
+              <li><a href="">Iarla</a></li>
+              <li><a href="">Karol</a></li>
+            </ul>
+        </div>
+        <div class="col-md-2">
+          <h6 style="text-align: left;">General</h6>
+          <ul class="footer-emails">
+            <li><a href="Signup.html">Sign Up</a></li>
+            <li><a href="Login.html">Log In</a></li>
+            <li><a href="Purchase.html">Checkout</a></li>
+          </ul>
+      </div>
+      <div class="col-md-3">
+        <h6 style="text-align: left;">Socials</h6>
+        <ul class="footer-emails">
+        <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Youtube</a></li>
+        </ul>
+    </div>
+        </div>
+      </div>
+      </footer>
+
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
