--- a/2-Door.html
+++ b/2-Door.html
@@ -151,7 +151,7 @@
     <div class="container my-4">
       <div class="row">
         <div class="col-md-4">
-          <a style="text-decoration: none;" href="file:///C:/Users/surya/Downloads/Motorworks/f40.html">
+          <a style="text-decoration: none;" href="f40.html">
           <div class="card">
             <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="card-img-top" alt="f40">
             <div class="card-body">
@@ -161,7 +161,7 @@
       </a>
       </div>
       <div class="col-md-4">
-        <a style="text-decoration: none;" href="file:///C:/Users/surya/Downloads/Motorworks/murci.html">
+        <a style="text-decoration: none;" href="murci.html">
         <div class="card">
           <img src="https://static.wikia.nocookie.net/topgear/images/0/03/2002_lamborghini_murcielago_2.jpg/revision/latest?cb=20111203192849" class="card-img-top" alt="f40">
           <div class="card-body">
@@ -171,7 +171,7 @@
     </a>
     </div>
     <div class="col-md-4">
-      <a style="text-decoration: none;" href="file:///C:/Users/surya/Downloads/Motorworks/slr.html">
+      <a style="text-decoration: none;" href="slr.html">
         <div class="card">
           <img src="https://i.ytimg.com/vi/RW2w5BhM6NM/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBUqfWfzYl3kZiE7eWwSdnN9aoYKg" class="card-img-top" alt="f40">
           <div class="card-body">
