--- a/f40.html
+++ b/f40.html
@@ -61,7 +61,7 @@
             <button id="myButton3" style="background-color: #0066ff; margin-left: 120px;"></button>
             <button id="myButton" style="background-color: #eeff00;"></button>
             <button id="myButton2" style="background-color: #ff0000;"></button>
-            <a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">
+            <a href="Purchase.html">
             <button id="purchase">Purchase</button>
           </a>
             <button id="shortlist">Shortlist</button>
