--- a/murci.html
+++ b/murci.html
@@ -60,7 +60,7 @@
             <button id="myButton3" style="background-color: orange; margin-left: 120px;"></button>
             <button id="myButton" style="background-color: white;"></button>
             <button id="myButton2" style="background-color: yellow;"></button>
-            <a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">
+            <a href="Purchase.html">
             <button id="purchase">Purchase</button>
           </a>
             <button id="shortlist">Shortlist</button>
