--- a/slr.html
+++ b/slr.html
@@ -59,7 +59,7 @@
             <button id="change-item">currency</button>
             <button id="myButton3" style="background-color:bisque; margin-left: 150px;"></button>
             <button id="myButton" style="background-color: silver;"></button>
-            <a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">
+            <a href="Purchase.html">
             <button id="purchase">Purchase</button>
           </a>
             <button id="shortlist">Shortlist</button>
