--- a/2-Door.html
+++ b/2-Door.html
@@ -321,9 +321,11 @@
       <div class="col-md-3">
         <h6 style="text-align: left;">Socials</h6>
         <ul class="footer-emails">
-        <li><a href="">Instagram</a></li>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Youtube</a></li>
+        <li><img src="insta_icon.png" style="width:25px;" alt="f40">
+          <img src="x_icon.png" style="width:25px;" alt="f40">
+          <img src="fb_icon.png" style="width:25px;" alt="f40">
+          <img src="yt_icon.png" style="width:25px;" alt="f40"></li>
+
         </ul>
     </div>
         </div>
