--- a/2-Wheeler.html
+++ b/2-Wheeler.html
@@ -245,7 +245,8 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
       </div>
     </div>
     
-    <footer class="bg-dark text-white text-center p-3">
+       <!--Footer-->
+      <footer class="bg-dark text-white text-center p-3">
       <div class="container my-4">
         <div class="row">
           <div class="col-md-2">
@@ -274,17 +275,29 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
           <div class="col-md-3">
             <h6 style="text-align: left;">Contact Us</h6>
             <ul class="footer-emails">
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Home.html">surya.sathyarajan2@mail.dcu.ie</a></li>
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">Fionn</a></li>
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">Iarla</a></li>
-              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">Karol</a></li>
+              <li><a href="">surya.sathyarajan2@mail.dcu.ie</a></li>
+              <li><a href="">Fionn</a></li>
+              <li><a href="">Iarla</a></li>
+              <li><a href="">Karol</a></li>
             </ul>
         </div>
         <div class="col-md-2">
           <h6 style="text-align: left;">General</h6>
+          <ul class="footer-emails">
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Signup.html">Sign Up</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Login.html">Log In</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">Checkout</a></li>
+          </ul>
       </div>
       <div class="col-md-3">
         <h6 style="text-align: left;">Socials</h6>
+        <ul class="footer-emails">
+        <li><img src="insta_icon.png" style="width:25px;" alt="f40">
+          <img src="x_icon.png" style="width:25px;" alt="f40">
+          <img src="fb_icon.png" style="width:25px;" alt="f40">
+          <img src="yt_icon.png" style="width:25px;" alt="f40"></li>
+
+        </ul>
     </div>
         </div>
       </div>
