--- a/Parts.html
+++ b/Parts.html
@@ -520,7 +520,7 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
     </div>
 </div>
     
-<!--Footer-->
+    <!--Footer-->
       <footer class="bg-dark text-white text-center p-3">
       <div class="container my-4">
         <div class="row">
@@ -559,17 +559,19 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
         <div class="col-md-2">
           <h6 style="text-align: left;">General</h6>
           <ul class="footer-emails">
-            <li><a href="Signup.html">Sign Up</a></li>
-            <li><a href="Login.html">Log In</a></li>
-            <li><a href="Purchase.html">Checkout</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Signup.html">Sign Up</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Login.html">Log In</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">Checkout</a></li>
           </ul>
       </div>
       <div class="col-md-3">
         <h6 style="text-align: left;">Socials</h6>
         <ul class="footer-emails">
-        <li><a href="">Instagram</a></li>
-            <li><a href="">Twitter</a></li>
-            <li><a href="">Youtube</a></li>
+        <li><img src="insta_icon.png" style="width:25px;" alt="f40">
+          <img src="x_icon.png" style="width:25px;" alt="f40">
+          <img src="fb_icon.png" style="width:25px;" alt="f40">
+          <img src="yt_icon.png" style="width:25px;" alt="f40"></li>
+
         </ul>
     </div>
         </div>
