--- a/f40.html
+++ b/f40.html
@@ -135,9 +135,9 @@
         <div class="col-md-2">
           <h6 style="text-align: left;">General</h6>
           <ul class="footer-emails">
-            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Signup.html">Sign Up</a></li>
-            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Login.html">Log In</a></li>
-            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">Checkout</a></li>
+            <li><a href="Signup.html">Sign Up</a></li>
+            <li><a href="Login.html">Log In</a></li>
+            <li><a href="Purchase.html">Checkout</a></li>
           </ul>
       </div>
       <div class="col-md-3">
