--- a/Parts.html
+++ b/Parts.html
@@ -55,8 +55,29 @@
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
         &emsp;Sign Up
         </button>
-        <marquee direction="left" style="flex: 1; white-space: nowrap;">
-            Welcome to SIFK Motorsports! &emsp;&emsp; Made by Surya, Iarla, Fionn, Karol
+<marquee direction="left" style="flex: 1; white-space: nowrap;">
+            Welcome to SIFK Motorsports! &emsp;|&emsp; 
+            Find Your Perfect Ride Faster &emsp;|&emsp;
+            Made by Surya, Iarla, Fionn, Karol &emsp;|&emsp;
+            “Some men take good care of a car; others treat it like one of the family.” - Evan Esar &emsp;|&emsp;
+            <img src="ferrari_logo.png" style="width:20px;"> &nbsp;
+            <img src="lambo_logo.png" style="width:20px;"> &nbsp;
+            <img src="mas_logo.png" style="width:20px;"> &nbsp;
+            <img src="porsche_logo.png" style="width:20px;"> &nbsp;
+            <img src="bmw_logo.png" style="width:20px;"> &nbsp;
+            <img src="benz_logo.png" style="width:20px;"> &emsp;|&emsp;
+            <img src="insta_icon.png" style="width:20px;"> &nbsp;
+          <img src="x_icon.png" style="width:20px;"> &nbsp;
+          <img src="fb_icon.png" style="width:20px;"> &nbsp;
+          <img src="yt_icon.png" style="width:20px;"> &emsp;|&emsp;
+          "Life is too short to drive boring cars." – Elvis Presley &emsp;|&emsp;
+          "A racing car is an animal with a thousand adjustments." – Mario Andretti &emsp;|&emsp;
+          “Speed has never killed anyone. Suddenly becoming stationary, that's what gets you.” ― Jeremy Clarkson &emsp;|&emsp;
+          “I’d like to consider Ferrari as a scaled down version of God.” - Jeremy Clarkson &emsp;|&emsp;
+          “I’m sorry, but having an Aston Martin DB9 on the drive and not driving it is a bit like having Keira Knightley in your bed and sleeping on the couch. If you’ve got even half a scrotum it’s not going to happen.” - Jeremy Clarkson &emsp;|&emsp;
+          "Aerodynamics are for people who can't build engines" - Enzo Ferrari
+
+
         </marquee>
     </div>
 
