--- a/2-Door.html
+++ b/2-Door.html
@@ -130,6 +130,10 @@
   <!--Slideshow container-->
   <div class="slideshow-container">
     <div class="mySlides">
+      <img class="mySlides-img" src="Fisk-poster.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
+      <div class="text" style="bottom:40%"> Discover. Drive. Dare. Delight.
+      </div>
+    <div class="mySlides">
       <img class="mySlides-img" src="m3_slide.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
       <div class="text">BMW M3</div>
     </div>
