--- a/2-Door.html
+++ b/2-Door.html
@@ -55,8 +55,9 @@
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
         &emsp;Sign Up
         </button>
-        <marquee direction="left" style="flex: 1; white-space: nowrap;">
-            Welcome to SIFK Motorsports! &emsp;|&emsp; 
+        <marquee direction="left" style="flex: 1; white-space: nowrap; text-shadow:
+        0 0 10px #fff;">
+            Welcome to FISK Motorsports! &emsp;|&emsp; 
             Find Your Perfect Ride Faster &emsp;|&emsp;
             Made by Surya, Iarla, Fionn, Karol &emsp;|&emsp;
             “Some men take good care of a car; others treat it like one of the family.” - Evan Esar &emsp;|&emsp;
