--- a/f40.html
+++ b/f40.html
@@ -156,8 +156,9 @@
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
+          // Currency Converter
+            
           let currentIndex = 0;
-  
           currency = 1500000
 
           let euro = currency
@@ -174,6 +175,8 @@
   
           }
       });
+
+      // Change Car Colour
 
       const myImg = document.getElementById("myImg");
       const myButton = document.getElementById("myButton");
