--- a/2-Door.html
+++ b/2-Door.html
@@ -214,7 +214,7 @@
     <div class="container my-4">
         <div class="row">
           <div class="col-md-4">
-            <div class="product" data-price="€781000">
+            <div class="product" data-price="781000">
                 <div class="card">
                     <img src="https://car-images.bauersecure.com/wp-images/5882/porsche918spyder.jpg" class="card-img-top" alt="f40">
                     <div class="card-body">
