--- a/2-Door.html
+++ b/2-Door.html
@@ -320,17 +320,18 @@
     </div>
     </div>
 
-    <div class="filt">
-      <div>
-          <label for="minPriceFilter">Min Price: </label>
-          <input type="text" id="minPriceFilter" placeholder="Enter min price">
-      </div>
-      <div>
-          <label for="maxPriceFilter">Max Price: </label>
-          <input type="text" id="maxPriceFilter" placeholder="Enter max price">
-      </div>
-      <button id="confirmButton" class="btn btn-primary mt-4">Confirm</button>
+<div class="filt">
+  <div>
+    <label for="minPriceFilter">Min Price: </label>
+    <input type="text" id="minPriceFilter" placeholder="Enter min price">
   </div>
+  <div>
+    <label for="maxPriceFilter">Max Price: </label>
+    <input type="text" id="maxPriceFilter" placeholder="Enter max price">
+  </div>
+  <button id="confirmButton" class="btn btn-primary">Confirm</button>
+</div>
+
     
         <!--Footer-->
       <footer class="bg-dark text-white text-center p-3">
