--- a/4-Door.html
+++ b/4-Door.html
@@ -421,6 +421,17 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
     </div>
         </div>
       </div>
+          <div class="filt">
+      <div>
+          <label for="minPriceFilter">Min Price: </label>
+          <input type="text" id="minPriceFilter" placeholder="Enter min price">
+      </div>
+      <div>
+          <label for="maxPriceFilter">Max Price: </label>
+          <input type="text" id="maxPriceFilter" placeholder="Enter max price">
+      </div>
+      <button id="confirmButton" class="btn btn-primary mt-4">Confirm</button>
+  </div>
       </footer>
 <script>
     const minPriceFilter = document.getElementById('minPriceFilter');
