--- a/2-Door.html
+++ b/2-Door.html
@@ -170,10 +170,9 @@
       </ul>
 
     <!--ROW 1-->
-    <div class="container my-4" id="productlist">
+    <div class="container my-4">
       <div class="row">
         <div class="col-md-4">
-          <div class="product" data-price="1500000">
             <a style="text-decoration: none;" href="f40.html">
               <div class="card">
                   <img src="https://cdn.ferrari.com/cms/network/media/img/resize/5de7923a91756c07f10b1720-ferrari-f40-1987-intro-share?width=1080" class="card-img-top" alt="f40">
@@ -182,7 +181,6 @@
                   </div>
               </div>
             </a>
-          </div>
         </div>
         <div class="col-md-4">
             <a style="text-decoration: none;" href="murci.html">
